--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,11 +17,11 @@ build_script:
   - yarn run build # команда сборки
 
 test_script:
-  - yarn run lint && yarn run ci # скрипт тестирования
+  # - yarn run lint && yarn run ci # скрипт тестирования
 
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
+  - npx push-dir --dir=build --branch=gh-pages --force --verbose
