--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home-works-1-component",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://r616on.github.io",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
